--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+body{
   font-family: 'Roboto', sans-serif;
 }
-
 /* inizio nav */
 nav{
   height: 82px;
@@ -41,3 +42,17 @@ nav{
   color: black;
 }
 /* fine nav */
+/* inizio main */
+.container{
+  width: 100%;
+  margin: auto;
+}
+
+.box img{
+  margin-top: 82px;
+  width: 100%;
+  height: 100vh;;
+  background-color: red;
+  background-size: cover;
+  background-position: center;
+}
