--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,16 @@ nav{
   margin: auto;
 }
 
-.box img{
+.biden{
   margin-top: 82px;
   width: 100%;
-  height: 100vh;;
-  background-color: red;
+  height: 100vh;
+  background-image: url('https://images.hdqwalls.com/wallpapers/joe-biden-ea.jpg');
   background-size: cover;
   background-position: center;
+}
+.box .layover{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
 }
