--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ nav{
   background-color: #031432;
   width: 100%;
   position: fixed;
+  z-index: 1;
   top: 0;
   left: 0;
 }
@@ -60,4 +61,14 @@ nav{
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.75);
+  position: relative;
+}
+h2{
+  font-size: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  color: white;
+  text-shadow: 3px 3px #000;
 }
