--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,9 @@ nav{
   background-color: rgba(0, 0, 0, 0.75);
   position: relative;
 }
+.box:hover .layover{
+  background-color: rgba(0, 0, 0, 0);
+}
 h2{
   font-size: 50px;
   position: absolute;
