--- a/css/style.css
+++ b/css/style.css
@@ -48,12 +48,21 @@ nav{
   width: 100%;
   margin: auto;
 }
-
 .biden{
-  margin-top: 82px;
+  background-image: url('https://images.hdqwalls.com/wallpapers/joe-biden-ea.jpg');
+}
+.trump{
+  background-image: url('https://images2.alphacoders.com/763/763009.jpg');
+}
+.jorgensen{
+  background-image: url('https://www.gannett-cdn.com/presto/2020/10/17/PTAL/f50a7dba-7c64-43c2-8c75-44d3fc817764-Jo_Jorgenson101.JPG');
+}
+.hawkins{
+  background-image: url('https://s3.amazonaws.com/dailyorange/wp-content/uploads/2018/03/27220447/103017_HowieHawkins_AlexandraMoreo_PE.jpg');
+}
+.box{
   width: 100%;
   height: 100vh;
-  background-image: url('https://images.hdqwalls.com/wallpapers/joe-biden-ea.jpg');
   background-size: cover;
   background-position: center;
 }
